@@ -1,0 +1,50 @@
+# @(#)$Id$
+#############################################################################
+#
+# This is a sample file for /etc/defaults/arpsponge/defaults
+#
+# The variables in this file have the installation defaults.
+#
+# Adjust to your taste.
+#
+#############################################################################
+
+#DUMMY_MODE=true
+
+INIT_MODE=@DFL_INIT@
+LEARNING=@DFL_LEARN@
+
+SPONGE_NETWORK=false
+GRATUITOUS=false
+
+QUEUE_DEPTH=@DFL_QUEUEDEPTH@
+RATE=@DFL_RATE@
+PENDING=@DFL_PENDING@
+
+# Default is not to sweep.
+#SWEEP="900/3600"
+PROBERATE=@DFL_PROBERATE@
+
+# Refresh ARP table entries after AGE
+AGE=@DFL_ARP_AGE@
+
+#############################################################################
+#
+# Now, for every ethX you want to monitor, create a "ethX" file in 
+# /etc/defaults/arpsponge, containing at least:
+#
+# 	NETWORK=prefix/len
+#
+# e.g.:
+#
+#	echo "NETWORK=192.168.1.1" > /etc/defaults/arpsponge/eth0
+#
+# or even:
+#
+#	echo "NETWORK=192.168.1.1" > /etc/defaults/arpsponge/eth-fake
+#	echo "DEVICE=lo" >> /etc/defaults/arpsponge/eth-fake
+#
+# Each of the variables above can be specified too and will be used
+# for this single instance of the sponge only.
+#
+#############################################################################
